# power-management

./: .gitignore  Dockerfile  README.md  doover_config.json  pyproject.toml  requirements.txt  update_doover_configs.py
.github/workflows/: build-image.yml  run-linting.yml
application/: Dockerfile  Pipfile  app_config.json  app_config.py  app_ui.py  application.py  docker-compose.yml  test_power_management.py
dashboard-widget/: package-lock.json  package.json  rsbuild.config.ts
dashboard-widget/assets/: SolarPowerDashboardWidget.js
dashboard-widget/src/: SolarPowerDashboardWidget.tsx
deployment/: app_config.json  docker-compose.yml
packages_export/aiohappyeyeballs-2.6.1.dist-info/: RECORD
packages_export/aiohttp-3.13.5.dist-info/: RECORD
packages_export/aiosignal-1.4.0.dist-info/: RECORD
packages_export/anyio-4.13.0.dist-info/: RECORD
packages_export/attrs-26.1.0.dist-info/: RECORD
packages_export/bleak-0.22.3.dist-info/: RECORD
packages_export/certifi-2026.4.22.dist-info/: RECORD
packages_export/click-8.4.0.dist-info/: RECORD
packages_export/dbus_fast-2.46.4.dist-info/: RECORD
packages_export/frozenlist-1.8.0.dist-info/: RECORD
packages_export/h11-0.16.0.dist-info/: RECORD
packages_export/httpcore-1.0.9.dist-info/: RECORD
packages_export/httpx-0.28.1.dist-info/: RECORD
packages_export/idna-3.15.dist-info/: RECORD
packages_export/multidict-6.7.1.dist-info/: RECORD
simulators/: app_config.json  dda_config.json  docker-compose.yml
src/power_management/: __init__.py  (+2 more)
tests/: test_demo.py  test_imports.py  test_power_management.py
(+25 files in other folders)
